--- a/css/entypo.css
+++ b/css/entypo.css
@@ -1,15 +1,14 @@
 @font-face {
     font-family: 'entypo';
-    src:    url('../fonts/entypo.eot?9bnfoj');
-    src:    url('../fonts/entypo.eot?9bnfoj#iefix') format('embedded-opentype'),
-        url('../fonts/entypo.ttf?9bnfoj') format('truetype'),
-        url('../fonts/entypo.woff?9bnfoj') format('woff'),
-        url('../fonts/entypo.svg?9bnfoj#entypo') format('svg');
+    src:
+        url('fonts/entypo.ttf?z4h7sa') format('truetype'),
+        url('fonts/entypo.woff?z4h7sa') format('woff'),
+        url('fonts/entypo.svg?z4h7sa#entypo') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-[class^="entypo-"], [class*=" entypo-"] {
+.entypo {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'entypo' !important;
     speak: none;
