--- a/css/entypo.css
+++ b/css/entypo.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'entypo';
     src:
-        url('fonts/entypo.ttf?z4h7sa') format('truetype'),
-        url('fonts/entypo.woff?z4h7sa') format('woff'),
-        url('fonts/entypo.svg?z4h7sa#entypo') format('svg');
+        url('../fonts/entypo.ttf') format('truetype'),
+        url('../fonts/entypo.woff') format('woff'),
+        url('../fonts/entypo.svg#entypo') format('svg');
     font-weight: normal;
     font-style: normal;
 }
