--- a/css/entypo.css
+++ b/css/entypo.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: 'entypo';
     src:
-        url('../fonts/entypo.ttf') format('truetype'),
-        url('../fonts/entypo.woff') format('woff'),
-        url('../fonts/entypo.svg#entypo') format('svg');
+        url('../fonts/entypo.ttf?49cp7g') format('truetype'),
+        url('../fonts/entypo.woff?49cp7g') format('woff'),
+        url('../fonts/entypo.svg?49cp7g#entypo') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-.entypo {
+.entypo-icons {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'entypo' !important;
     speak: none;
@@ -17,6 +17,15 @@
     font-variant: normal;
     text-transform: none;
     line-height: 1;
+
+    /* Enable Ligatures ================ */
+    letter-spacing: 0;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
 
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
